<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Instagram Lite</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_share">Share</string>
    <string name="title_favourite">Activity</string>
    <string name="title_profile">Profile</string>
    <string name="title_library">Library</string>
    <string name="title_photo">Photo</string>

    <string name="string_next">Next</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="string_back">Back</string>
    <string name="string_post">New Post</string>
    <string name="string_post_hint">Please add tags at the end with # before them.</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to main feed-->
    <string name="sort_switch_on">Sorted by location</string>
    <string name="sort_switch_off">Sorted by date</string>
    <string name="string_brightness">Brightness</string>
    <string name="string_contrast">Contrast</string>
    <string name="string_crop">Crop</string>
    <string name="string_constrast_1_0">Constrast: 1.0</string>
    <string name="string_brightness_0">Brightness: 0</string>
    <string name="string_share">Share</string>
    <string name="string_post_image">PostImage</string>

</resources>