<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/white_grey_border_bottom">

    <android.support.v7.widget.Toolbar
        android:id="@+id/effectToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/effectBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/string_back"
                android:src="@drawable/ic_black_back" />

            <ImageView
                android:id="@+id/effect_filter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="23dp"
                android:layout_marginRight="23dp"
                android:layout_toStartOf="@+id/effect_bright"
                android:layout_toLeftOf="@+id/effect_bright"
                android:contentDescription="@string/string_brightness"
                android:src="@drawable/ic_filter" />

            <ImageView
                android:id="@+id/effect_bright"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="23dp"
                android:layout_marginRight="23dp"
                android:layout_toStartOf="@+id/effect_contrast"
                android:layout_toLeftOf="@+id/effect_contrast"
                android:contentDescription="@string/string_brightness"
                android:src="@drawable/ic_brightness" />

            <ImageView
                android:id="@+id/effect_contrast"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/string_contrast"
                android:src="@drawable/ic_contrast" />

            <ImageView
                android:id="@+id/effect_crop"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="23dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="0dp"
                android:layout_toEndOf="@+id/effect_contrast"
                android:layout_toRightOf="@+id/effect_contrast"
                android:contentDescription="@string/string_crop"
                android:src="@drawable/ic_crop" />

            <TextView
                android:id="@+id/effectNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:text="@string/string_next"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

</android.support.design.widget.AppBarLayout>